--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -33,9 +33,10 @@ h4 {
   cursor: pointer;
 }
 
+
 #closeBtn:focus {
   outline: none;
-  box-shadow: none; /* Also removes the potential box-shadow on Bootstrap buttons */
+  box-shadow: none;
 }
 
 .user-info {
